<resources>
    <string name="app_name">Weather</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="app_scheme">weather</string>
    <string name="app_scheme_host">jvrcoding.com</string>

    <string name="channel_id">default</string>
    <string name="channel_name">Weather Notification Channel</string>
    <string name="channel_description">Lorem ipsum</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="short_label">Static Shortcut</string>
    <string name="long_label">This is a long label hahahahahahhahahahaha</string>
    <string name="disabled_label">loko2</string>

    <string name="celsius">&#8451;</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>

    <string name="please_set_your_time_and_timezone_to_automatic_mode">Please set your time and timezone to automatic mode.</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="current_weather">Current Weather</string>
    <string name="weather_list">Weather List</string>
    <string name="please_set_your_time_automatically">Please set your time and timezone to automatic mode</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="your_gps_seems_to_be_disabled">Your GPS seems to be disabled, please enable it.</string>
    <string name="location_permission_required">Location permission is Required to use this app</string>
    <string name="successfully_registered">Successfully Registered</string>
    <string name="cancel">Cancel</string>

<!--    error messages-->
    <string name="the_request_timed_out">The request timed out</string>
    <string name="bad_request">Bad Request</string>
    <string name="unauthorized_error">Unauthorized</string>
    <string name="youve_hit_your_rate_limit">You\'ve hit your rate limit</string>
    <string name="no_internet">Couldn\'t reach server. Check your internet connection.</string>
    <string name="file_too_large">The file you tried to upload was too large.</string>
    <string name="something_went_wrong_error">Oops, something went wrong. Please try again.</string>
    <string name="location_error">Make sure your location is turned on</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="error_disk_full">Failed to save the item because your device\'s disk is full</string>
    <string name="error_serialization">Oops, couldn\'t parse data.</string>
    <string name="username_is_empty">Username can\'t be empty.</string>
    <string name="password_is_empty">Password can\'t be empty.</string>
    <string name="invalid_credentials">Invalid Credentials.</string>

    <string name="firstname_is_empty">Firstname can\'t be empty.</string>
    <string name="lastname_is_empty">Lastname can\'t be empty.</string>
    <string name="confirm_password_is_empty">Confirm Password can\'t be empty.</string>
    <string name="password_not_match">Password not match.</string>
    <string name="username_already_exist">Username already exist.</string>


</resources>